--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
-body {
+h1{
+  color:Purple;
+    font-style: italic;
+   font-size: 150%;
+}
+Body{
+  background-color:Grey;
 
 }
+img{
+  height:200px;
+   border: 4px dotted blue;
+  rotate: 30deg;
+
+}
+body:hover{
+  background-color:green;
+}
+
+  font-style: italic;
