--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 h1{
   color:Purple;
     font-style: italic;
@@ -8,12 +9,44 @@ Body{
 
 }
 img{
-  height:380px;
-   border: 4px dotted blue;
+  height:100px;
+   border: 2px Dotted Red;
 
 }
-body:hover{
-  background-color:green;
+
 }
 
   font-style: italic;
+
+nav {
+  list-style-type: none;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.navClass {
+  display: inline;
+  float: right;
+  padding: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: Blue;
+  font-size: 120%;
+}
+
+.navClass:hover {
+  background-color: Orange;
+}
+table, th, td {
+  border: 1px solid #B63A57;
+  border-collapse: collapse;
+}
+    th, td {
+  padding: 10px;
+}
+    tr:hover{background-color:Orange:}
+    body {background-color: #2B94A9;}
